--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  padding: .5rem;
+  flex-wrap: wrap;
+  /* flex: 1; */
 }
 
 .logo {
@@ -14,6 +19,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 1rem;
+  padding: 0;
+  
 }
 
 a {
@@ -22,4 +31,10 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.right-links, .left-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
