--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: .5rem 1rem;
 }
 
 .profile-image {
@@ -45,4 +48,13 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  gap: 1rem;
+}
+
+.left-side, .right-side {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
