--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,21 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  /* margin: 0 auto; */
+  gap: 52px;
+  flex-wrap: wrap;
+}
+
+.flex-item {
+  text-align: center;
+  max-width: 200px;
 }
 
 /* do not edit this footer */
